welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  arrive()
}

def arrive():Boolean = {
  var x = getMondeHauteur()
  var y = getMondeLaugeur()
  return (getX()==x && gatY()==y)
}